отправка на ревью номер 1

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <section class="feynman">
         <h class="feynman__title">Метод Фейнмана</h>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подбробнее &#8594;</a>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
         <div class="feynman__main-illustration"></div>
       </section>
 
