--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="logo logo_place_header"></div>
       
       <h1 class="header__title">Научиться учиться</h1>
-
-      <p class="subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link">Узнать &#8594;</a></p>
+  
+      <p class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link"> Узнать &#8594;</a></p>
       
       <img src="./images/header-image.png" alt="моя иллюстрция" class="header__main-illustration">
 
@@ -22,19 +22,19 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
-          <h1 class="brief">Главные проблемы в обучении</h1>
-          <div class="main-text">
-            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="paragraph"><span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учёбу и мозг</h2>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -43,7 +43,7 @@
           <li class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text-margin">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
@@ -56,7 +56,7 @@
           <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text-margin">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
@@ -74,58 +74,58 @@
       </section>
 
       <section class="feynman">
-        <h class="feynman__title">Метод Фейнмана</h>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
         <div class="feynman__main-illustration"></div>
       </section>
 
       <section class="kaufman">
-        <h1 class="section-title_theme_dark">Принципы обучения</h1>
-        <h2 class="section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table_theme_dark">
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">1</h3>
-            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">2</h3>
-            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">3</h3>
-            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">4</h3>
-            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">5</h3>
-            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">6</h3>
-            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">7</h3>
-            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">8</h3>
-            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">9</h3>
-            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">10</h3>
-            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman_triangle"></div>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
@@ -134,20 +134,20 @@
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
-        <div class="footer__column footer_content_info">
-          <h1 class="footer__column-heading">О Практикуме</h1>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
-          </div>
-        </div>
-        <div class="footer__column footer_content_social">
-          <h2 class="footer__column-heading">Соцсети</h2>
+        <nav class="footer__column footer__column_content_info">
+          <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
-            <li><a href="http://www.facebook.com" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt='Facebook'> Facebook</a></li>
-            <li><a href="http://www.vk.com" class="footer__column-link" alt='vk.com'><img src="./images/vk_color_white.svg" alt='vk.com'> ВКонтакте</a></li>
-            <li><a href="https://www.instagram.com" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt='Instagram'> Instagram</a></li>
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
+          </ul>
+        </nav>
+        <div class="footer__column footer__column_content_social">
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <ul class="footer__column-links">
+            <li><a href="http://www.facebook.com" class="footer__column-link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook"> Фейсбук</a></li>
+            <li><a href="http://www.vk.com" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте"> ВКонтакте</a></li>
+            <li><a href="https://www.instagram.com" class="footer__column-link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram"> Instagram</a></li>
           </ul>
         </div>
       </div>
