--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
       <h1 class="header__title">Научиться учиться</h1>
   
-      <p class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link hover"> Узнать &#8594;</a></p>
+      <p class="header__subtitle">Какие современные и эфективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link hover" target="_self"> Узнать &#8594;</a></p>
       
       <img src="./images/header-image.png" alt="моя иллюстрция" class="header__main-illustration">
 
@@ -82,7 +82,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link hover">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link hover" target="_self">Подробнее &rarr;</a>
         <div class="feynman__main-illustration"></div>
       </section>
 
@@ -136,7 +136,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src ="./images/khan-book.jpg"  alt="книга-весь мир школа">
-            <a href="#" class="khan__buy-link hover">Купить книгу &rarr;</a>
+            <a href="#" class="khan__buy-link hover" target="_self">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -193,10 +193,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__logo resources__logo_arzamas hover" href="#"></a>
-          <a class="resources__logo resources__logo_n1 hover" href="#"></a>
-          <a class="resources__logo resources__logo_strelka hover" href="#"></a>
-          <a class="resources__logo resources__logo_polka hover" href="#"></a>
+          <a class="resources__logo resources__logo_arzamas hover" target="_self" href="#"></a>
+          <a class="resources__logo resources__logo_n1 hover" target="_self" href="#"></a>
+          <a class="resources__logo resources__logo_strelka hover" target="_self" href="#"></a>
+          <a class="resources__logo resources__logo_polka hover" target="_self" href="#"></a>
         </div>
       </section>
 
@@ -210,17 +210,17 @@
         <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link hover">Главная</a></li>
-            <li><a href="#" class="footer__column-link hover">Концепция</a></li>
-            <li><a href="#" class="footer__column-link hover">Наставники</a></li>
+            <li><a href="#" class="footer__column-link hover" target="_self">Главная</a></li>
+            <li><a href="#" class="footer__column-link hover" target="_self">Концепция</a></li>
+            <li><a href="#" class="footer__column-link hover" target="_self">Наставники</a></li>
           </ul>
         </nav>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
-            <li><a href="http://www.facebook.com" class="footer__column-link hover"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook"> Фейсбук</a></li>
-            <li><a href="http://www.vk.com" class="footer__column-link hover"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте"> ВКонтакте</a></li>
-            <li><a href="https://www.instagram.com" class="footer__column-link hover"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram"> Instagram</a></li>
+            <li><a href="http://www.facebook.com" class="footer__column-link hover" target="_self"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook"> Фейсбук</a></li>
+            <li><a href="http://www.vk.com" class="footer__column-link hover" target="_self"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте"> ВКонтакте</a></li>
+            <li><a href="https://www.instagram.com" class="footer__column-link hover" target="_self"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram"> Instagram</a></li>
           </ul>
         </div>
       </div>
