--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
@@ -193,10 +192,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__logo resources__logo_arzamas hover" target="_self" href="#"></a>
-          <a class="resources__logo resources__logo_n1 hover" target="_self" href="#"></a>
-          <a class="resources__logo resources__logo_strelka hover" target="_self" href="#"></a>
-          <a class="resources__logo resources__logo_polka hover" target="_self" href="#"></a>
+          <a class="resources__logo resources__logo_image-arzamas hover" target="_self" href="#"></a>
+          <a class="resources__logo resources__logo_image-n1 hover" target="_self" href="#"></a>
+          <a class="resources__logo resources__logo_image-strelka hover" target="_self" href="#"></a>
+          <a class="resources__logo resources__logo_image-polka hover" target="_self" href="#"></a>
         </div>
       </section>
 
